@@ -33,15 +33,16 @@
    ! set elements symbols
    !
    DATA elements /  &
- "H ",                                                                                "He",&
- "Li","Be",                                                  "B ","C ","N ","O ","F ","Ne",&
- "Na","Mg",                                                  "Al","Si","P ","S ","Cl","Ar",&
- "K ","Ca","Sc","Ti","V ","Cr","Mn","Fe","Co","Ni","Cu","Zn","Ga","Ge","As","Se","Br","Kr",&
- "Rb","Sr","Y ","Zr","Nb","Mo","Tc","Ru","Rh","Pd","Ag","Cd","In","St","Sb","Te","I ","Xe",&
- "Cs","Ba","La","Hf","Ta","W ","Re","Os","Ir","Pt","Au","Hg","Tl","Pb","Bi","Po","At","Rn",&
- "Fr","Ra","Ac", &
-                "Ce","Pr","Nd","Pm","Sm","Eu","Gd","Tb","Dy","Ho","Er","Tm","Yb","Lu",&
-                "Th","Pa","U ","Np","Pu","Am","Cm","Bk","Cf","Es","Fm","Md","No","Lr" /
+& "H ",                                                                                "He",&
+& "Li","Be",                                                  "B ","C ","N ","O ","F ","Ne",&
+& "Na","Mg",                                                  "Al","Si","P ","S ","Cl","Ar",&
+& "K ","Ca","Sc","Ti","V ","Cr","Mn","Fe","Co","Ni","Cu","Zn","Ga","Ge","As","Se","Br","Kr",&
+& "Rb","Sr","Y ","Zr","Nb","Mo","Tc","Ru","Rh","Pd","Ag","Cd","In","St","Sb","Te","I ","Xe",&
+& "Cs","Ba","La",                                                                           &
+&                     "Ce","Pr","Nd","Pm","Sm","Eu","Gd","Tb","Dy","Ho","Er","Tm","Yb","Lu",&
+&                "Hf","Ta","W ","Re","Os","Ir","Pt","Au","Hg","Tl","Pb","Bi","Po","At","Rn",&
+& "Fr","Ra","Ac",                                                                           &
+&                  "Th","Pa","U ","Np","Pu","Am","Cm","Bk","Cf","Es","Fm","Md","No","Lr" /
 
 
 PUBLIC :: elements
